--- a/src/main/javascript/specview/specview/controller/demo3.html
+++ b/src/main/javascript/specview/specview/controller/demo3.html
@@ -126,6 +126,9 @@ function initPage(){
 		      editor.spectrumRenderer.renderAxis(spectrumData,editor.spectrumRenderer.box,'black');
 			  editor.spectrumRenderer.renderGrid(editor.specObject.mainSpecBox,'black',spectrumData.spectrum);
 
+			  goog.dom.getElement("molName").innerHTML="Molecule name: "+spectrumData.molecule.name;
+			  goog.dom.getElement("molId").innerHTML="Molecule id: "+spectrumData.molecule.molecule_id;
+			  goog.dom.getElement("experimentType").innerHTML="Experiment type: "+spectrumData.experienceType;
 		      
 		    });
 
@@ -287,18 +290,21 @@ var moveSpectrum=function(move,direction){
     
   </script>
  <img name="track" style="position:absolute;left:665px;top:25px;display:block;z-index:10;" src="../../images/track.gif" width="100" height="50" alt="Zoom Tool"  title="Zoom Tool"/>
+
+
 	<fieldset style="width:1200px">
         <legend><h1>Spectrum viewer</h1></legend>
         <br>
-           <script>initPage();alert(truc)</script>
-        <li><b>Molecule name:</b><script>document.write(spectrumData.molecule.name)</script></li>
-        <li><b>Molecule id: </b><script>document.write(spectrumData.molecule.molecule_id)</script></li>
-        <li><b>Experiment type: </b><script>document.write(spectrumData.experienceType)</script></li>
-        <li><b>Experiment id: </b><script>document.write(spectrumData.molecule.name)</script></li>
+         	           <script>initPage();alert(truc)</script> 
+        <li id="molName"><b>Molecule name:</b><script>document.write(spectrumData.molecule.name)</script></li>
+        <li id="molId"><b>Molecule id: </b><script>document.write(spectrumData.molecule.molecule_id)</script></li>
+        <li id="experimentType"><b>Experiment type: </b><script>document.write(spectrumData.experienceType)</script></li>
+        <li id="experimentId"><b>Experiment id: </b><script>document.write(spectrumData.molecule.name)</script></li>
         <label id="selectMolecule">Select a spectrum to render: </label>
         <br>
         <div id="moleculeContainer" style="height:300px"></div>
 	</fieldset>
+
 
 </body>
 </html>
