--- a/src/main/javascript/specview/specview/controller/demo3.html
+++ b/src/main/javascript/specview/specview/controller/demo3.html
@@ -58,6 +58,9 @@ function initPage(){
 			editor.setModels([spectrumData]);
 			editor.spectrumRenderer.renderAxis(spectrumData,editor.spectrumRenderer.box,'black');
 			editor.spectrumRenderer.renderGrid(editor.specObject.mainSpecBox,'black',spectrumData.spectrum);
+			  goog.dom.getElement("molName").innerHTML="<b>Molecule name: </b>"+spectrumData.molecule.name;
+			  goog.dom.getElement("molId").innerHTML="<b>Molecule id: </b>"+spectrumData.molecule.molecule_id;
+			  goog.dom.getElement("experimentType").innerHTML="<b>Experiment type: </b>"+spectrumData.experienceType;
 
 			//Creation of the tool bar
 		    var select1 = new goog.ui.Select();
@@ -126,9 +129,9 @@ function initPage(){
 		      editor.spectrumRenderer.renderAxis(spectrumData,editor.spectrumRenderer.box,'black');
 			  editor.spectrumRenderer.renderGrid(editor.specObject.mainSpecBox,'black',spectrumData.spectrum);
 
-			  goog.dom.getElement("molName").innerHTML="Molecule name: "+spectrumData.molecule.name;
-			  goog.dom.getElement("molId").innerHTML="Molecule id: "+spectrumData.molecule.molecule_id;
-			  goog.dom.getElement("experimentType").innerHTML="Experiment type: "+spectrumData.experienceType;
+			  goog.dom.getElement("molName").innerHTML="<b>Molecule name: </b>"+spectrumData.molecule.name;
+			  goog.dom.getElement("molId").innerHTML="<b>Molecule id: </b>"+spectrumData.molecule.molecule_id;
+			  goog.dom.getElement("experimentType").innerHTML="<b>Experiment type: </b>"+spectrumData.experienceType;
 		      
 		    });
 
@@ -279,7 +282,6 @@ var moveSpectrum=function(move,direction){
     goog.events.listen(sliderMoveSpectra,'drag',function(e){
         var percent = Math.abs(Math.round(100 * (e.left - e.dragger.limits.left) /
   	          e.dragger.limits.width)-100);
-//        $('slider4').innerHTML = percent;
         if(percent<previousPercent){
         	moveSpectrum(previousPercent,"right");
         }else if(percent>previousPercent){
@@ -288,6 +290,7 @@ var moveSpectrum=function(move,direction){
         previousPercent=percent;
     })
     
+
   </script>
  <img name="track" style="position:absolute;left:665px;top:25px;display:block;z-index:10;" src="../../images/track.gif" width="100" height="50" alt="Zoom Tool"  title="Zoom Tool"/>
 
@@ -295,11 +298,10 @@ var moveSpectrum=function(move,direction){
 	<fieldset style="width:1200px">
         <legend><h1>Spectrum viewer</h1></legend>
         <br>
-         	           <script>initPage();alert(truc)</script> 
-        <li id="molName"><b>Molecule name:</b><script>document.write(spectrumData.molecule.name)</script></li>
-        <li id="molId"><b>Molecule id: </b><script>document.write(spectrumData.molecule.molecule_id)</script></li>
-        <li id="experimentType"><b>Experiment type: </b><script>document.write(spectrumData.experienceType)</script></li>
-        <li id="experimentId"><b>Experiment id: </b><script>document.write(spectrumData.molecule.name)</script></li>
+        <li id="molName"></li>
+        <li id="molId"></li>
+        <li id="experimentType"></li>
+        <li id="experimentId" onmouseover="showPopUp()"><b>Experiment id: </b><script>//document.write(spectrumData.molecule.name)</script></li>
         <label id="selectMolecule">Select a spectrum to render: </label>
         <br>
         <div id="moleculeContainer" style="height:300px"></div>
