--- a/src/main/webapps/metabolights/var/colorScheme.htm
+++ b/src/main/webapps/metabolights/var/colorScheme.htm
@@ -11,23 +11,29 @@
 /* Palette color codes */
 /* Feel free to copy&paste color codes to your application */
 
-.primary-1 { background-color: #FFFFCC }
-.primary-2 { background-color: #999966 }
-.primary-3 { background-color: #666600 }
+.primary-1 { background-color: #FFFF99 }
+.primary-2 { background-color: #CCCC99 }
+.primary-3 { background-color: #CCCC66 }
 .primary-4 { background-color: #FFFFCC }
 .primary-5 { background-color: #FFFFCC }
 
-.secondary-a-1 { background-color: #CCCCCC }
-.secondary-a-2 { background-color: #996666 }
-.secondary-a-3 { background-color: #660033 }
-.secondary-a-4 { background-color: #CCCCCC }
-.secondary-a-5 { background-color: #CCCCCC }
+.secondary-a-1 { background-color: #FFFF99 }
+.secondary-a-2 { background-color: #CCCC99 }
+.secondary-a-3 { background-color: #CCCC66 }
+.secondary-a-4 { background-color: #FFFFCC }
+.secondary-a-5 { background-color: #FFFFCC }
 
-.secondary-b-1 { background-color: #9999CC }
-.secondary-b-2 { background-color: #666666 }
-.secondary-b-3 { background-color: #330033 }
-.secondary-b-4 { background-color: #CC99CC }
-.secondary-b-5 { background-color: #CC99CC }
+.secondary-b-1 { background-color: #CC99FF }
+.secondary-b-2 { background-color: #CC99CC }
+.secondary-b-3 { background-color: #9966CC }
+.secondary-b-4 { background-color: #CC99FF }
+.secondary-b-5 { background-color: #CC99FF }
+
+.complement-1 { background-color: #CC99FF }
+.complement-2 { background-color: #9999CC }
+.complement-3 { background-color: #9966CC }
+.complement-4 { background-color: #CCCCFF }
+.complement-5 { background-color: #CCCCFF }
 
 /* end */
 
@@ -93,7 +99,7 @@ hr {
 </head><body>
 
 <h1>Color Palette by Color Scheme Designer</h1>
-<p>Palette URL: <a href="http://colorschemedesigner.com/#2fb1D68.tQb7A">http://colorschemedesigner.com/#2fb1D68.tQb7A</a></p>
+<p>Palette URL: <a href="http://colorschemedesigner.com/#1xc1L9FVchI5T">http://colorschemedesigner.com/#1xc1L9FVchI5T</a></p>
 <p>Color Space: RGB (Web Safe Colors); RGB color space reduced to 216 web safe color set</p>
 
 <table class="color-table">
@@ -101,26 +107,26 @@ hr {
 		<th>Primary Color:</th>
 		<td class="sample primary-1">
 			<div class="white">
-<strong>FFFFCC</strong>
+<strong>FFFF99</strong>
 			</div>
 			<div class="black">
-<strong>FFFFCC</strong>
+<strong>FFFF99</strong>
 			</div>
 		</td>
 		<td class="sample primary-2">
 			<div class="white">
-<strong>999966</strong>
+<strong>CCCC99</strong>
 			</div>
 			<div class="black">
-<strong>999966</strong>
+<strong>CCCC99</strong>
 			</div>
 		</td>
 		<td class="sample primary-3">
 			<div class="white">
-<strong>666600</strong>
+<strong>CCCC66</strong>
 			</div>
 			<div class="black">
-<strong>666600</strong>
+<strong>CCCC66</strong>
 			</div>
 		</td>
 		<td class="sample primary-4">
@@ -144,42 +150,42 @@ hr {
 		<th>Secondary Color A:</th>
 		<td class="sample secondary-a-1">
 			<div class="white">
-<strong>CCCCCC</strong>
+<strong>FFFF99</strong>
 			</div>
 			<div class="black">
-<strong>CCCCCC</strong>
+<strong>FFFF99</strong>
 			</div>
 		</td>
 		<td class="sample secondary-a-2">
 			<div class="white">
-<strong>996666</strong>
+<strong>CCCC99</strong>
 			</div>
 			<div class="black">
-<strong>996666</strong>
+<strong>CCCC99</strong>
 			</div>
 		</td>
 		<td class="sample secondary-a-3">
 			<div class="white">
-<strong>660033</strong>
+<strong>CCCC66</strong>
 			</div>
 			<div class="black">
-<strong>660033</strong>
+<strong>CCCC66</strong>
 			</div>
 		</td>
 		<td class="sample secondary-a-4">
 			<div class="white">
-<strong>CCCCCC</strong>
+<strong>FFFFCC</strong>
 			</div>
 			<div class="black">
-<strong>CCCCCC</strong>
+<strong>FFFFCC</strong>
 			</div>
 		</td>
 		<td class="sample secondary-a-5">
 			<div class="white">
-<strong>CCCCCC</strong>
+<strong>FFFFCC</strong>
 			</div>
 			<div class="black">
-<strong>CCCCCC</strong>
+<strong>FFFFCC</strong>
 			</div>
 		</td>
 	</tr>
@@ -187,42 +193,85 @@ hr {
 		<th>Secondary Color B:</th>
 		<td class="sample secondary-b-1">
 			<div class="white">
-<strong>9999CC</strong>
+<strong>CC99FF</strong>
 			</div>
 			<div class="black">
-<strong>9999CC</strong>
+<strong>CC99FF</strong>
 			</div>
 		</td>
 		<td class="sample secondary-b-2">
 			<div class="white">
-<strong>666666</strong>
+<strong>CC99CC</strong>
 			</div>
 			<div class="black">
-<strong>666666</strong>
+<strong>CC99CC</strong>
 			</div>
 		</td>
 		<td class="sample secondary-b-3">
 			<div class="white">
-<strong>330033</strong>
+<strong>9966CC</strong>
 			</div>
 			<div class="black">
-<strong>330033</strong>
+<strong>9966CC</strong>
 			</div>
 		</td>
 		<td class="sample secondary-b-4">
 			<div class="white">
-<strong>CC99CC</strong>
+<strong>CC99FF</strong>
 			</div>
 			<div class="black">
-<strong>CC99CC</strong>
+<strong>CC99FF</strong>
 			</div>
 		</td>
 		<td class="sample secondary-b-5">
 			<div class="white">
-<strong>CC99CC</strong>
+<strong>CC99FF</strong>
 			</div>
 			<div class="black">
-<strong>CC99CC</strong>
+<strong>CC99FF</strong>
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<th>Complementary Color:</th>
+		<td class="sample complement-1">
+			<div class="white">
+<strong>CC99FF</strong>
+			</div>
+			<div class="black">
+<strong>CC99FF</strong>
+			</div>
+		</td>
+		<td class="sample complement-2">
+			<div class="white">
+<strong>9999CC</strong>
+			</div>
+			<div class="black">
+<strong>9999CC</strong>
+			</div>
+		</td>
+		<td class="sample complement-3">
+			<div class="white">
+<strong>9966CC</strong>
+			</div>
+			<div class="black">
+<strong>9966CC</strong>
+			</div>
+		</td>
+		<td class="sample complement-4">
+			<div class="white">
+<strong>CCCCFF</strong>
+			</div>
+			<div class="black">
+<strong>CCCCFF</strong>
+			</div>
+		</td>
+		<td class="sample complement-5">
+			<div class="white">
+<strong>CCCCFF</strong>
+			</div>
+			<div class="black">
+<strong>CCCCFF</strong>
 			</div>
 		</td>
 	</tr>
@@ -252,6 +301,14 @@ hr {
 		<td class="sample secondary-b-3"></td>
 		<td class="sample secondary-b-4"></td>
 		<td class="sample secondary-b-5"></td>
+	</tr>
+	<tr>
+		<th>Complementary Color:</th>
+		<td class="sample complement-1"></td>
+		<td class="sample complement-2"></td>
+		<td class="sample complement-3"></td>
+		<td class="sample complement-4"></td>
+		<td class="sample complement-5"></td>
 	</tr>
 </tbody></table>
 
