--- a/specview/src/main/javascript/specview/specview/controller/demo3.html
+++ b/specview/src/main/javascript/specview/specview/controller/demo3.html
@@ -36,6 +36,7 @@ function initPage(){
 			c.setCapturing(true); 
 			
 			var cmlData=cmlmolecules.split("$$END$$\n");
+//			alert(cmlData.length)
 			var xmlDoc=specview.io.SpectrumCMLParser.getDocument(cmlData[15]);//XML document
 			spectrumData=new specview.model.NMRdata();
 			spectrumData=specview.io.SpectrumCMLParser.parseDocument(spectrumData,xmlDoc);//a cmlObject
@@ -75,8 +76,11 @@ function initPage(){
 		    select1.addItem(new goog.ui.MenuItem('12', 12));
 		    select1.addItem(new goog.ui.MenuItem('13', 13));
 		    select1.addItem(new goog.ui.MenuItem('14', 14));
-		    select1.addItem(new goog.ui.MenuItem('MassSpec', 15)); 
-		    select1.addItem(new goog.ui.MenuItem('Narengin', 16)); 
+		    select1.addItem(new goog.ui.MenuItem('MassSpec1', 15)); 
+		    select1.addItem(new goog.ui.MenuItem('MassSepc2', 16));
+		    select1.addItem(new goog.ui.MenuItem('MassSepc3', 17));
+		    select1.addItem(new goog.ui.MenuItem('MassSepc4', 18));
+		    select1.addItem(new goog.ui.MenuItem('MassSepc5', 19));
 		    
 		    select1.setSelectedIndex(0);
 		    select1.render(goog.dom.getElement('selectMolecule'));
