--- a/specview/src/main/javascript/specview/specview/controller/demo3.html
+++ b/specview/src/main/javascript/specview/specview/controller/demo3.html
@@ -75,7 +75,7 @@ function initPage(){
 		    select1.addItem(new goog.ui.MenuItem('11', 11));
 		    select1.addItem(new goog.ui.MenuItem('12', 12));
 		    select1.addItem(new goog.ui.MenuItem('13', 13));
-		    select1.addItem(new goog.ui.MenuItem('14', 14));
+		    select1.addItem(new goog.ui.MenuItem('MassSpec0', 14));
 		    select1.addItem(new goog.ui.MenuItem('MassSpec1', 15)); 
 		    select1.addItem(new goog.ui.MenuItem('MassSepc2', 16));
 		    select1.addItem(new goog.ui.MenuItem('MassSepc3', 17));
