--- a/specview/src/main/javascript/specview/specview/controller/demo3.html
+++ b/specview/src/main/javascript/specview/specview/controller/demo3.html
@@ -36,7 +36,7 @@ function initPage(){
 			c.setCapturing(true); 
 			
 			var cmlData=cmlmolecules.split("$$END$$\n");
-//			alert(cmlData.length)
+			alert(cmlData.length)
 			var xmlDoc=specview.io.SpectrumCMLParser.getDocument(cmlData[15]);//XML document
 			spectrumData=new specview.model.NMRdata();
 			spectrumData=specview.io.SpectrumCMLParser.parseDocument(spectrumData,xmlDoc);//a cmlObject
@@ -81,6 +81,9 @@ function initPage(){
 		    select1.addItem(new goog.ui.MenuItem('MassSepc3', 17));
 		    select1.addItem(new goog.ui.MenuItem('MassSepc4', 18));
 		    select1.addItem(new goog.ui.MenuItem('MassSepc5', 19));
+		    select1.addItem(new goog.ui.MenuItem('MassSepc6', 20));
+		    select1.addItem(new goog.ui.MenuItem('MassSepc7', 21));
+		    select1.addItem(new goog.ui.MenuItem('MassSepc8', 22));
 		    
 		    select1.setSelectedIndex(0);
 		    select1.render(goog.dom.getElement('selectMolecule'));
