--- a/specview/src/main/javascript/specview/specview/controller/demo3.html
+++ b/specview/src/main/javascript/specview/specview/controller/demo3.html
@@ -12,7 +12,7 @@
     goog.require('specview.controller.Controller');
     goog.require('specview.controller.plugins.Highlight');
     goog.require('specview.io.SpectrumCMLParser');
-    goog.require('specview.io.SpectrumCMLParserIE');
+    goog.require('specview.io.SpectrumCMLParser');
     goog.require('specview.model.NMRdata');
     goog.require('goog.events.MouseWheelHandler');
     goog.require('goog.fx.Dragger');
@@ -40,16 +40,16 @@ function initPage(){
 			var cmlData=cmlmolecules.split("$$END$$\n");
 			if(!IE){
 				document.getElementById("slider").innerHTML="MOZIL";
-				var xmlDoc=specview.io.SpectrumCMLParserIE.getDocument(cmlData[15]);//XML document
+				var xmlDoc=specview.io.SpectrumCMLParser.getDocument(cmlData[15]);//XML document
 	//			alert(xmlDoc)
 				spectrumData=new specview.model.NMRdata();
-				spectrumData=specview.io.SpectrumCMLParserIE.parseDocument(spectrumData,xmlDoc,navigator.appName);//a cmlObject
+				spectrumData=specview.io.SpectrumCMLParser.parseDocument(spectrumData,xmlDoc,navigator.appName);//a cmlObject
 			}else{
 				document.getElementById("slider").innerHTML="IE";
-				var xmlDoc=specview.io.SpectrumCMLParserIE.getDocument(cmlData[15]);//XML document
+				var xmlDoc=specview.io.SpectrumCMLParser.getDocument(cmlData[15]);//XML document
 	//			alert(xmlDoc)
 				spectrumData=new specview.model.NMRdata();
-				spectrumData=specview.io.SpectrumCMLParserIE.parseDocument(spectrumData,xmlDoc,navigator.appName);//a cmlObject
+				spectrumData=specview.io.SpectrumCMLParser.parseDocument(spectrumData,xmlDoc,navigator.appName);//a cmlObject
 			
 			}
 			//Create the canvas and provide it with highlight plugins
@@ -135,9 +135,9 @@ function initPage(){
 		      }
 		      var molfile=cmlData[idx];
 		      var xmlDox;
-			      xmlDoc=specview.io.SpectrumCMLParserIE.getDocument(molfile);//XML document
+			      xmlDoc=specview.io.SpectrumCMLParser.getDocument(molfile);//XML document
 			      spectrumData=new specview.model.NMRdata();
-			      spectrumData=specview.io.SpectrumCMLParserIE.parseDocument(spectrumData,xmlDoc);//a cmlObject
+			      spectrumData=specview.io.SpectrumCMLParser.parseDocument(spectrumData,xmlDoc);//a cmlObject
 				  spectrumData.setCoordinatesWithPixels(editor,0)
 			//CAREFUL WITH THE FOLLOWING LINE
 			  editor.setSpecObject(spectrumData);
