--- a/specview/src/main/javascript/specview/specview/controller/demo3.html
+++ b/specview/src/main/javascript/specview/specview/controller/demo3.html
@@ -75,7 +75,6 @@ function initPage(){
 		    select1.addItem(new goog.ui.MenuItem('MassSepc4', 17));
 		    select1.addItem(new goog.ui.MenuItem('MassSepc5', 18));
 		    select1.addItem(new goog.ui.MenuItem('MassSepc6', 19));
-		    select1.addItem(new goog.ui.MenuItem('MassSepc6', 20));
 		    
 		    select1.setSelectedIndex(0);
 		    select1.render(goog.dom.getElement('selectMolecule'));
@@ -204,7 +203,7 @@ var moveSpectrum=function(move,direction){
           $('slider2').innerHTML = percent;
     })
    //To zoom in the x dimension and toward the bigger values
-    var slider = new goog.fx.Dragger($('slider'), null, limits);
+    var slider = new goog.fx.Dragger($('slider1'), null, limits);
     goog.events.listen(slider, 'drag', function(e) {
       var percent = Math.abs(Math.round(100 * (e.left - e.dragger.limits.left) /
     	          e.dragger.limits.width)-100);
