A LOT OF BUG FIXED and it works for more things
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@246 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/specview/src/main/javascript/specview/specview/controller/demo3.html
+++ b/specview/src/main/javascript/specview/specview/controller/demo3.html
@@ -41,7 +41,7 @@ function initPage(){
 			//Create the canvas and provide it with highlight plugins
 			editor = new specview.controller.Controller(goog.dom.getElement('moleculeContainer'),{background : {color : 'white'}});
 			editor.registerPlugin(new specview.controller.plugins.Highlight());
-			spectrumData.setCoordinatesWithPixels(editor,0)
+			spectrumData.setCoordinatesWithPixels(editor)
 
 			editor.setSpecObject(spectrumData);
 			editor.setModels([spectrumData]);
