--- a/specview/src/main/javascript/specview/specview/controller/demo3.html
+++ b/specview/src/main/javascript/specview/specview/controller/demo3.html
@@ -74,6 +74,7 @@ function initPage(){
 		    select1.addItem(new goog.ui.MenuItem('MS_3', 16));
 		    select1.addItem(new goog.ui.MenuItem('MS_4', 17));
 		    select1.addItem(new goog.ui.MenuItem('MS_5', 18));
+		    select1.addItem(new goog.ui.MenuItem('MS_6', 19));
 		    
 		    select1.setSelectedIndex(0);
 		    select1.render(goog.dom.getElement('selectMolecule'));
