--- a/specview/src/main/javascript/specview/specview/controller/demo3.html
+++ b/specview/src/main/javascript/specview/specview/controller/demo3.html
@@ -83,8 +83,28 @@ function initPage(){
 		    grid.render(goog.dom.getElement('selectMolecule'));
 		    var axis= new goog.ui.Button("axis");
 		    axis.render(goog.dom.getElement('selectMolecule'));
+		    var resetSpectrum = new goog.ui.Button('resetSpectrum');
+		    resetSpectrum.render(goog.dom.getElement('resetSpectrum'));
+		    var resetMolecule = new goog.ui.Button('resetMolecule');
+		    resetMolecule.render(goog.dom.getElement('resetMolecule'));
 
-
+		    
+		    goog.events.listen(resetMolecule,goog.ui.Component.EventType.ACTION,
+		    		function(e){
+		    	editor.clearSamy(spectrumData.molecule,spectrumData.mainMolBox,spectrumData.transform);
+		    });
+			/*
+			 Rudimentary way of specificaly clearing the spectrum
+			*/
+		    goog.events.listen(resetSpectrum,goog.ui.Component.EventType.ACTION,
+		    		function(e){
+		    	for(var k = 0;k<15;k++){
+			    	editor.clearSamy(spectrumData.spectrum, spectrumData.mainSpecBox,spectrumData.transform);
+		    		editor.spectrumRenderer.renderAxis(spectrumData,editor.spectrumRenderer.box,'white');
+		    		editor.spectrumRenderer.renderGrid(editor.specObject.mainSpecBox,'white',spectrumData.spectrum);	
+		    	}
+		    });
+		    
 		    goog.events.listen(axis,goog.ui.Component.EventType.ACTION,
 		    		function(e){
 		    	if(!isAxis){
