BUg fixed : zoom button rendered in OPERA
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@313 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/specview/src/main/javascript/specview/specview/controller/demo3.html
+++ b/specview/src/main/javascript/specview/specview/controller/demo3.html
@@ -192,9 +192,11 @@ var moveSpectrum=function(move,direction){
 	<title>Display spectrum demo</title>
 	<link rel="stylesheet" href="../../css/specview.css" />
 	<link rel="stylesheet"  href="../../css/demo.css" />
-	<link rel="stylesheet" href="../style/style.html" />
+<!-- 	<link rel="stylesheet" href="../style/style.html" /> -->
 
 </head>
+
+
 
 
 <body>
