safari + drawing rectangle on the spectrum (to zoom)
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@330 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/specview/src/main/javascript/specview/specview/controller/demo3.html
+++ b/specview/src/main/javascript/specview/specview/controller/demo3.html
@@ -160,7 +160,7 @@ function initPage(){
 		      editor.setModels([spectrumData]);
 		      editor.spectrumRenderer.renderAxis(spectrumData,editor.spectrumRenderer.box,'black');
 			  editor.spectrumRenderer.renderGrid(editor.specObject.mainSpecBox,'black',spectrumData.spectrum);
-
+			  document.metaSpecObject = spectrumData;
 			  goog.dom.getElement("molName").innerHTML="<b>Molecule name: </b>"+spectrumData.molecule.name;
 			  goog.dom.getElement("molId").innerHTML="<b>Molecule id: </b>"+spectrumData.molecule.molecule_id;
 			  goog.dom.getElement("experimentType").innerHTML="<b>Experiment type: </b>"+spectrumData.experienceType;
