Zoom by selecting an area version 3 : value on axis corrected and adapted
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@337 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/specview/src/main/javascript/specview/specview/controller/demo3.html
+++ b/specview/src/main/javascript/specview/specview/controller/demo3.html
@@ -273,7 +273,7 @@ var moveSpectrum=function(move,direction){
  <img name="track" style="position:absolute;left:665px;top:25px;display:block;z-index:10;" src="../../images/track.gif" width="100" height="50" alt="Zoom Tool"  title="Zoom Tool"/>
 
 	<fieldset style="width:1200px">
-        <legend><h1>Spectrum viewer</h1></legend>
+        <legend><h1>Metabolight Spectrum viewer</h1></legend>
         <br>
         <li id="molName"></li>
         <li id="molId"></li>
