--- a/specview/src/main/javascript/specview/specview/controller/demo3.html
+++ b/specview/src/main/javascript/specview/specview/controller/demo3.html
@@ -41,7 +41,7 @@ function initPage(){
 //			var toolbar = new specview.controller.DefaultToolbar.makeDefaultMoleculeToolbar(goog.dom.getElement('moleculeEditorToolbar'));  
 			
 			var cmlData=cmlmolecules.split("$$END$$\n");
-			var xmlDoc=specview.io.SpectrumCMLParser.getDocument(cmlData[5]);//XML document
+			var xmlDoc=specview.io.SpectrumCMLParser.getDocument(cmlData[1]);//XML document
 			spectrumData=new specview.model.NMRdata();
 			spectrumData=specview.io.SpectrumCMLParser.parseDocument(spectrumData,xmlDoc,navigator.appName);//a cmlObject
 			
@@ -50,6 +50,8 @@ function initPage(){
 			editor.registerPlugin(new specview.controller.plugins.Highlight());
 			editor.registerPlugin(new specview.controller.plugins.Zoom());
 //			editor.registerPlugin(new specview.controller.plugins.BondEdit());
+			spectrumData.editor=editor;
+
 			spectrumData.setCoordinatesWithPixels(editor)
 
 			editor.setSpecObject(spectrumData);
@@ -57,6 +59,7 @@ function initPage(){
 			editor.spectrumRenderer.renderAxis(spectrumData,editor.spectrumRenderer.box,'black');
 			editor.spectrumRenderer.renderGrid(editor.specObject.mainSpecBox,'black',spectrumData.spectrum);
 
+			
 			document.metaSpecObject = spectrumData;
 			
 			//Display the informations about the molecule
@@ -286,8 +289,9 @@ var moveSpectrum=function(move,direction){
         <li id="molName"></li>
         <li id="molId"></li>
         <li id="experimentType"></li>
-
         <li id="experimentId"><b>Experiment id: </b><script>//document.write(spectrumData.molecule.name)</script></li>
+        <li id=zoom
+        	style="position:absolute;left:930px;top:195px"><b>Zoom</b>: To zoom on the spectrum, drag a rectangle<br> over the area you wish to focus on.</li>
         <label id="selectMolecule">Select a spectrum to render: </label>
         <br>
         <div id="moleculeContainer" style="height:500px"></div>
