--- a/specview/src/main/javascript/specview/specview/controller/demo3.html
+++ b/specview/src/main/javascript/specview/specview/controller/demo3.html
@@ -191,9 +191,9 @@ goog.events.listen(window, goog.events.EventType.LOAD, initPage);
 	<title>Display spectrum demo</title>
 	<link rel="stylesheet" href="../../css/specview.css" />
 	<link rel="stylesheet"  href="../../css/demo.css" />
-	 <img name="logoMetabolight"  src="../../../../../../../metabolights-webapps/src/main/webapps/metabolights/img/searchBox.png"
+	 <img name="logoMetabolight"  src="../../images/searchBox.png"
 	 	  width="1400" height="100" alt="Zoom Tool"  title="Zoom Tool"/>
-	 <img name="Metabolight"  src="../../../../../../../metabolights-webapps/src/main/webapps/metabolights/img/banner.png"
+	 <img name="Metabolight"  src="../../images/banner.png"
    	 	  style="position:absolute;left:25px;top:35px;display:block;z-index:10;"/>
 </head>
 
