--- a/specview/src/main/javascript/specview/specview/controller/demo3.html
+++ b/specview/src/main/javascript/specview/specview/controller/demo3.html
@@ -220,7 +220,10 @@ goog.events.listen(window, goog.events.EventType.LOAD, initPage);
 	 <b>Visualisation of experiment of type</b>:
 	 	<br><br>-H NMR
 	 	<br>-C NMR
-	 	<br>-Mass Spec     
+	 	<br>-Mass Spectrometry :
+	 	<br>-1D MS
+	 	<br>-MS/.../MS (coming soon)
+	 	
 	 </div>
 
         <li id=zoom
