--- a/specview/src/main/javascript/specview/specview/controller/demo3.html
+++ b/specview/src/main/javascript/specview/specview/controller/demo3.html
@@ -217,7 +217,7 @@ goog.events.listen(window, goog.events.EventType.LOAD, initPage);
     		   position: absolute;
 		       z-index: 1;
     		   visibility: show;">
-	 <b>Visualisation of experiment of type</b>:
+	 <b>Experiment visualisation tool for :</b>:
 	 	<br><br>-H NMR
 	 	<br>-C NMR
 	 	<br>-Mass Spectrometry :
