Added new molecules including a bigass one
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@425 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/specview/src/main/javascript/specview/specview/controller/demo3.html
+++ b/specview/src/main/javascript/specview/specview/controller/demo3.html
@@ -87,13 +87,23 @@ function initPage(){
 		    select1.addItem(new goog.ui.MenuItem('NMR_11', 11));
 		    select1.addItem(new goog.ui.MenuItem('NMR_12', 12));
 		    select1.addItem(new goog.ui.MenuItem('MS_0 (very old cml file)', 13));
-		    select1.addItem(new goog.ui.MenuItem('MS_1', 14));
-		    select1.addItem(new goog.ui.MenuItem('MS_2', 15)); 
-		    select1.addItem(new goog.ui.MenuItem('MS_3', 16));
-		    select1.addItem(new goog.ui.MenuItem('MS_4 (problem in mol coords)', 17));
-		    select1.addItem(new goog.ui.MenuItem('MS_5', 18));
-		    select1.addItem(new goog.ui.MenuItem('MS_6', 19));
-		    select1.addItem(new goog.ui.MenuItem('MS_7 (same atom IDs)', 20));
+		    select1.addItem(new goog.ui.MenuItem('Narengenin)', 14));
+		    select1.addItem(new goog.ui.MenuItem('chEBI:776', 15)); 
+		    select1.addItem(new goog.ui.MenuItem('chEBI:1734', 16));
+		    select1.addItem(new goog.ui.MenuItem('chEBI:1895 (problem in mol coords)', 17));
+		    select1.addItem(new goog.ui.MenuItem('chEBI:2303', 18));
+		    select1.addItem(new goog.ui.MenuItem('chEBI:776', 19));
+		    select1.addItem(new goog.ui.MenuItem('16alpha-hydroxyestrone (SAIDs NTOBM)', 20));
+		    select1.addItem(new goog.ui.MenuItem('4-O methylsoflavone (SAIDs NNTOM)', 21));
+		    select1.addItem(new goog.ui.MenuItem('8-(1,1-dimethylallyl)galangin (SAIDs NTOBM)', 22));
+		    select1.addItem(new goog.ui.MenuItem('(+)-absicissic acid (SAIDs NNTM)', 23));
+		    select1.addItem(new goog.ui.MenuItem('amoxiciline (SAIDs NNTM)', 24));
+		    select1.addItem(new goog.ui.MenuItem('8-(1,1-dimethylallyl)galangin (SAIDs NNTM)', 25));
+		    select1.addItem(new goog.ui.MenuItem('benzatrapone (SAIDs NNTM)', 26));
+		    select1.addItem(new goog.ui.MenuItem('betaxolone (SAIDs NNTM)', 27));
+		    select1.addItem(new goog.ui.MenuItem('biperiden (SAIDs NNTM)', 28));
+		    select1.addItem(new goog.ui.MenuItem('Bigass molecule (SAIDsc NNTM)', 29));
+		    select1.addItem(new goog.ui.MenuItem('brinzolamide (SAIDsc NNTM)', 30));
 		    
 		    select1.setSelectedIndex(0);
 		    select1.render(goog.dom.getElement('selectMolecule'));
