Added some options to make it interactive with the user
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@439 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/specview/src/main/javascript/specview/specview/controller/help.html
+++ b/specview/src/main/javascript/specview/specview/controller/help.html
@@ -45,7 +45,7 @@
 		</ul>
 		<ul>
 			<li>
-			Multi dimension MS
+			Multi dimension MS (<b>CHALLENGE ACCEPTED</b>)
 			</li>
 		</ul>
 	</li>
@@ -72,6 +72,15 @@
 	</li>
 	<li>
 		<b> Select :</b>
+		<ul>
+			<li>
+				The <i><b>highlighting</b></i>:
+			</li>
+			<li>
+				The <i><b>sensitivity</b></i>:
+			</li>
+		</ul>
+		
 	</li>
 </ul>
 <br>
