x Axis values adapted to spectrum expantion option
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@462 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/specview/src/main/javascript/specview/specview/controller/demo3.html
+++ b/specview/src/main/javascript/specview/specview/controller/demo3.html
@@ -218,9 +218,11 @@ goog.events.listen(window, goog.events.EventType.LOAD, initPage);
 
 function expandSpectrum(){
 //	alert(spectrumData)
+	spectrumData.expand = true;
 	spectrumData.expandSpectrum();
 	editor.spectrumRenderer.clearSpectrum(spectrumData.mainSpecBox,editor.graphics)
 	editor.spectrumRenderer.render(spectrumData,spectrumData.transform,spectrumData.mainSpecBox);
+	
     editor.spectrumRenderer.renderAxis(spectrumData,editor.spectrumRenderer.box,'black');
 	editor.spectrumRenderer.renderGrid(editor.specObject.mainSpecBox,'black',spectrumData.spectrum);	
 //	document.metaSpecObject.expandSpectrum();
