--- a/specview/src/main/javascript/specview/specview/controller/demo3.html
+++ b/specview/src/main/javascript/specview/specview/controller/demo3.html
@@ -42,7 +42,7 @@ function initPage(){
 //			var toolbar = new specview.controller.DefaultToolbar.makeDefaultMoleculeToolbar(goog.dom.getElement('moleculeEditorToolbar'));  
 			
 			var cmlData=cmlmolecules.split("$$END$$\n");
-			var xmlDoc=specview.io.SpectrumCMLParser.getDocument(cmlData[32]);//XML document
+			var xmlDoc=specview.io.SpectrumCMLParser.getDocument(cmlData[1]);//XML document
 			spectrumData=new specview.model.NMRdata();
 			spectrumData=specview.io.SpectrumCMLParser.parseDocument(spectrumData,xmlDoc,navigator.appName);//a cmlObject
 			
@@ -219,7 +219,8 @@ goog.events.listen(window, goog.events.EventType.LOAD, initPage);
 function expandSpectrum(){
 //	alert(spectrumData)
 	spectrumData.expand = true;
-	spectrumData.expandSpectrum();
+	editor.expandSpectrum();
+//	spectrumData.expandSpectrum();
 	editor.spectrumRenderer.clearSpectrum(spectrumData.mainSpecBox,editor.graphics)
 	editor.spectrumRenderer.render(spectrumData,spectrumData.transform,spectrumData.mainSpecBox);
 	
